2001-02-07 10:30 GMT+1 Ignacio Ortiz <ignacioortiz@fivetech.com>
   * harbour/source/debug/dbgtmenu.prg
     + Accelerator keys on popup menus fixed.

   * harbour/source/debug/tbrwtext.prg
     + Wrong comment on search method.

2001-02-06 23:57 GMT+1 Maurilio Longo <maurilio.longo@libero.it>
   * source/rtl/tbrowse.prg
     + added ::MGotoYX(nRow, nCol) method which hilights cell under screen coordinates nRow, nCol
     should help following a mouse. NOTE: hacked up and not tested. I'm very busy at the moment.
     * NOTE latest change to TBrowse (my previous entry in changelog) fixed a problem but created
     a new one :-) I'll have to rethink a little bit ::Stabilize() logic.

2001-02-06 20:30 GMT+1 Ignacio Ortiz <ignacioortiz@fivetech.com>
   * harbour/source/debug/dbgmenu.prg
     + Debugger full locate menu support.

   * harbour/source/debug/tbrwtext.prg
     + New search method

   * harbour/source/debug/debugger.prg
     + Debugger full locate menu support.

2001-02-06 17:47 GMT+1 Antonio Linares <alinares@fivetech.com>
   * harbour/source/debug/dbgtmenu.prg
     + debugger colors selection support.

   * harbour/source/debug/dbgmenu.prg
     + call to debugger SelColors() option.

   * harbour/source/debug/dbgtwin.prg
     + debugger colors selection support.

   * harbour/source/debug/debugger.prg
     + colors selection option implemented

     Notice: Not finished yet.

2001-02-06 12:11 GMT+1 Antonio Linares <alinares@fivetech.com>
   * harbour/source/debug/dbgmenu.prg
     + New CHECKED clause added on menuitems.

   * harbour/source/debug/dbgtmenu.prg
     + two spaces added on popup menuitems to support check mark.

   * harbour/source/debug/dbgtmitm.prg
     + New DATA lChecked and METHOD Toggle() added.

2001-02-06 12:00 GMT+3 Alexander Kresin <alex@belacy.belgorod.su>
   * harbour/source/rdd/dbfntx/dbfntx1.c
     * fixed problem with correct movement via CA Clipper created ntx file

2001-02-05 16:15 UTC-0500 David G. Holm <dholm@jsd-llc.com>