@@ -1,3 +1,7 @@
+2001-02-07 13:50 GMT+3 Alexander Kresin <alex@belacy.belgorod.su>
+   * harbour/source/pp/ppcore.c
+     * now pp gives error if '<' haven't matched '>' .
+
 2001-02-07 10:30 GMT+1 Ignacio Ortiz <ignacioortiz@fivetech.com>
    * harbour/source/debug/dbgtmenu.prg
      + Accelerator keys on popup menus fixed.
